--- a/SpendingManagement/SpendingManagement/appsettings.json
+++ b/SpendingManagement/SpendingManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyDB": "Server=(local);uid=sa;pwd=123;database=SpendingManagement"
+  }
 }
